--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Packaged Electron + React + TypeScript + Nestjs",
   "main": "./dist/main.bundle.js",
   "scripts": {
+    "dev": "yarn build:dev && cross-env NODE_ENV=development electron ./dist/main.bundle.js",
     "start": "cross-env NODE_ENV=production electron ./dist/main.bundle.js",
     "build:dev": "rimraf dist && cross-env NODE_ENV=development webpack --watch --progress --colors",
     "build:prod": "rimraf dist && cross-env NODE_ENV=production webpack --progress --colors",
@@ -44,6 +45,9 @@
     "@types/react-router-dom": "^4.3.5",
     "acorn": "^6.4.0",
     "ajv": "^6.10.2",
+    "cache-manager": "^3.2.1",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.11.1",
     "copy-pkg-json-webpack-plugin": "0.0.38",
     "cross-env": "^5.2.1",
     "css-loader": "^1.0.1",
@@ -59,6 +63,7 @@
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.15",
     "mocha": "^5.2.0",
+    "prettier": "^2.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^2.7.1",
     "rxjs": "^6.5.4",
